Change the GET api to work with query params, lint
