# src/api/comments.controller.ts
@@ -11,10 +11,10 @@ import { Logger } from 'nestjs-pino'
 import moment from 'moment'
 import PgBoss from 'pg-boss'
 import { Request, Response } from 'express'
+import { CommentInFormat } from '../shared/comments/formatted-comment'
 
 @Controller('comments')
 export class CommentsController {
-
   constructor(
     @Inject('PG_BOSS') private readonly jobQueue: PgBoss,
     private readonly accountService: AccountService,
@@ -22,7 +22,8 @@ export class CommentsController {
     private readonly contentFilteringService: ContentFilteringService,
     private readonly configService: ConfigService,
     private readonly logger: Logger,
-    private readonly emailService: EmailService) {}
+    private readonly emailService: EmailService
+  ) {}
 
   @Get()
   async comments(@Req() req: Request): Promise<CommentWithId[]> {
@@ -31,19 +32,17 @@ export class CommentsController {
   }
 
   @Get(':url')
-  async commentsForUrl(@Req() req: Request, @Param() params : { url: string }): Promise<CommentWithId[]> {
-    const since  = req.query['since'] as string
+  async commentsForUrl(@Req() req: Request, @Param() params: { url: string }): Promise<CommentWithId[]> {
+    const since = req.query['since'] as string
     const fromDate = req.query['fromDate'] as string
     const maybeDate = moment(fromDate)
     return this.formattedForContentType(
-      (await this.commentsService
-        .commentsForUrl(
-          _.get(req, 'account') as Account,
-          params.url, {
-          afterId: since,
-          fromDate: fromDate && maybeDate.isValid() ? maybeDate.toDate() : undefined
-          })
-      ), this.formatFromRequest(req))
+      await this.commentsService.commentsForUrl(_.get(req, 'account') as Account, params.url, {
+        afterId: since,
+        fromDate: fromDate && maybeDate.isValid() ? maybeDate.toDate() : undefined,
+      }),
+      this.formatFromRequest(req)
+    )
   }
 
   private formatFromRequest(req: Request): string {
@@ -51,35 +50,20 @@ export class CommentsController {
   }
 
   private formattedForContentType(comments: CommentWithId[], format?: string): CommentWithId[] {
-    switch(format) {
-      case 'markdown':
-        return comments.map(c => {
-          c.text = this.contentFilteringService.toMarkdown(c.text)
-          return c
-        })
-      case 'html':
-        return comments.map(c => {          
-          c.text = this.contentFilteringService.toHtml(c.text)
-          return c
-        })
-      case 'text':  
-        return comments.map(c => {          
-          c.text = this.contentFilteringService.toPlainText(c.text)
-          return c
-        })
-      default:
-        return comments
-    }
+    return comments.map((c) => new CommentInFormat(c, this.contentFilteringService).toFormat(format)) as CommentWithId[]
   }
 
   @Post()
-  async postCommentForUrl(@Req() req: Request, @Body() comment: CommentDto,
-    @Res() res: Response): Promise<void> {
+  async postCommentForUrl(@Req() req: Request, @Body() comment: CommentDto, @Res() res: Response): Promise<void> {
     const account = _.get(req, 'account') as Account
-    const result = await this.commentsService.create(account, {
-      ... comment,
-      postedAt: moment().utc().toDate()
-    }, req.ip)
+    const result = await this.commentsService.create(
+      account,
+      {
+        ...comment,
+        postedAt: moment().utc().toDate(),
+      },
+      req.ip
+    )
 
     if (req.headers['content-type'] !== 'application/json') {
       // assuming the request comes from the web page -> redirect back
@@ -97,13 +81,12 @@ export class CommentsController {
       const emailSettings = await this.accountService.emailSettingsFor(account)
       if (emailSettings?.notifyOnComments) {
         // notify
-        this.logger.debug("Scheduling an email notification about a new comment")
+        this.logger.debug('Scheduling an email notification about a new comment')
         const email = this.emailService.notifyOnSingleComment(comment, `${this.configService.adminUrl()}/dashboard`)
         this.jobQueue.publish('notify-on-new-comment-via-email', { account, email })
       }
     } catch (oops) {
       this.logger.warn(`Trouble scheduling email notification: ${(oops as Error)?.message}`)
     }
-
   }
 }
